<resources>
    <string name="app_name">Tarea2</string>
    <string name="tv_usuario">Usuario</string>
    <string name="tv_correo">Correo</string>
    <string name="tv_clave">Contrasena</string>
    <string name="msg_error_registro">No se pudo registrar, compruebe las casillas</string>
    <string name="msg_error_login">No se pudo autenticar su cuenta, compruebe los datos</string>
    <string name="title_activity_principal">Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_nav_principal">NavPrincipal</string>

    <string name="menu_compra">Compras</string>
    <string name="menu_gallery">Reportes</string>
    <string name="menu_slideshow">Estadisticas</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="msg_nombre">Nombre de la compra</string>
    <string name="msg_correo">Correo (elcorreo@xxxx.xxx)</string>
    <string name="msg_telefono">Telefono (9999-9999)</string>
    <string name="msg_web">Sitio Web</string>
    <string name="msg_cantidad">Cantidad</string>
    <string name="msg_precio">Precio</string>
    <string name="bt_addCompra">Agregar Compra</string>
    <string name="bt_updateCompra">Actualizar Compra</string>
    <string name="msg_compra_added">Compra agregado</string>
    <string name="msg_data">Faltan datos</string>
    <string name="msg_compra_update">Compra actualizado</string>

</resources>